[package]
name = "salsa-inline-query"
version = "0.1.0"
authors = ["Zuo Baoquan <baoquan.zuo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-quote = "0.3.0"
proc-macro2 = { version = "1.0.6", features = ["nightly"] }
syn = { version = "1.0.11", features = ["full", "fold"] }